--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
                 </div>
                 <div class="pt-lg-0 pt-sm-0 pt-5">
                     <div class="pt-lg-3 pt-5">
-                        <button class="btn btn-primary w-25 p-lg-3"  onclick="changeImage('./public/images/iWatch-home.png'); shakeButton(this)">
+                        <button class="btn btn-primary w-25 p-lg-3 p-1 okay-ease"  onclick="changeImage('./public/images/iWatch-home.png'); shakeButton(this)">
                             <span class="bi bi-apple"></span>IWatch
                         </button>
-                        <button class="btn btn-primary w-25 p-lg-3" onclick="changeImage('./public/images/iPhone-home.png'); shakeButton(this)">
+                        <button class="btn btn-primary w-25 p-lg-3 p-1" onclick="changeImage('./public/images/iPhone-home.png'); shakeButton(this)">
                             <span class="bi bi-apple"></span>Imobile
                         </button>
                         <br>
-                        <button class="btn btn-primary w-25 p-lg-3 mt-3" onclick="changeImage('./public/images/iPad-home.png'); shakeButton(this)">
+                        <button class="btn btn-primary w-25 p-lg-3 mt-3 p-1" onclick="changeImage('./public/images/iPad-home.png'); shakeButton(this)">
                             <span class="bi bi-apple">Ipads&nbsp;&nbsp;&nbsp;</span>   
                         </button>
-                        <button class="btn btn-primary w-25 p-lg-3 mt-3" onclick="changeImage('./public/images/iMacbook-home.png'); shakeButton(this)">
+                        <button class="btn btn-primary w-25 p-lg-3 mt-3 p-0" onclick="changeImage('./public/images/iMacbook-home.png'); shakeButton(this)">
                             <span class="bi bi-apple"></span>IMacbook
                         </button>
                     </div>
